--- a/src/css/home.css
+++ b/src/css/home.css
@@ -44,3 +44,23 @@ h1 {
     background-position: 600px;
   }
 }
+
+.video-background {
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
+}
+
+#background-video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+  opacity: 1; 
+}
+
