--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,13 +1,13 @@
 .pizza-name-text {
-  @apply text-[20px] text-white  font-semibold;
+  @apply text-[20px] text-white font-semibold;
 }
 
 .pizza-price {
-  @apply text-[24px] text-white  text-center w-[94px] h-[36px];
+  @apply text-[24px] text-white text-center w-[94px] h-[36px];
 }
 
 .price-box {
-  @apply flex  gap-[10px] font-medium;
+  @apply flex gap-[10px] font-medium;
 }
 
 .discription-text {
@@ -18,10 +18,10 @@
 
 h1 {
   color: hsl(0, 0%, 28%);
-  font-size: 50px!important;
-  font-weight: bold!important;
+  font-size: 50px !important;
+  font-weight: bold !important;
   font-family: 'Courier New', Courier, monospace;
-  letter-spacing: 0px!important;
+  letter-spacing: 0px !important;
   cursor: pointer;
   text-transform: uppercase;
 }
@@ -37,25 +37,26 @@ h1 {
   0% {
     background-position: 0;
   }
+
   60% {
     background-position: 600px;
   }
+
   100% {
     background-position: 600px;
   }
 }
 
 .video-background {
-  /* position: relative; */
-  /* height: 100vh; */
-  /* width: 100%; */
-  /* overflow: hidden; */
-  margin-top: 90px;
-  margin-left: 105px;
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
+
 }
 
 #background-video {
-  /* position: absolute; */
+  position: absolute;
   top: 50%;
   left: 50%;
   width: 100%;
@@ -63,6 +64,5 @@ h1 {
   object-fit: cover;
   transform: translate(-50%, -50%);
   z-index: -1;
-  opacity: 1; 
+  opacity: 1;
 }
-
